--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,4 +1,4 @@
 <%= render 'layouts/navigation' %>
 <div class="ui container ">
-<h1> Welcome to root route mother fucker!! </h1>
+<h1> Welcome to root route</h1>
 </div>
