--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -12,64 +12,45 @@
 		<div class="ui fluid raised card chatbox">
   			<div class="content">
 				<div class="ui feed">
-				  <div class="event">
-				    <div class="content">
-				      <div class="summary">
-				         <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
-				      </div>
+				  
+				<% @messages.each do |message| %>
+					<div class="event">
+				    	<div class="content">
+				      		<div class="summary">
+				      			<em> <%= message.user.username %></em>: <%= message.body %>
+				      		</div>
+				      	</div>
 				    </div>
-				  </div>
-				  <div class="event">
-				    <div class="content">
-				      <div class="summary">
-				         <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
-				      </div>
-				    </div>
-				  </div>
-				  <div class="event">
-				    <div class="content">
-				      <div class="summary">
-				         <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
-				      </div>
-				    </div>
-				  </div>
-				  <div class="event">
-				    <div class="content">
-				      <div class="summary">
-				         <em> Harsh Patel</em>: Test Message
-				      </div>
-				    </div>
-				  </div>
-			</div>
-		</div>
-		<div class="extra content">
-			<form class="ui reply form">
-			    <div class="field">
-			    	<div class="ui fluid icon input">
-			    		<input type="text" placeholder="Enter a Message...">
-			      		<i class="bordered inverted green edit icon"></i> 
-			    	</div>
-			    </div>
-			  </form>
+          		<% end %>
 		</div>
 	</div>
-</div>
+	<div class="extra content">
+        <form class="ui reply form">
+          <div class="field">
+            <div class="ui fluid icon input">
+              <input type="text" placeholder="Enter a message...">
+              <i class="bordered inverted green edit icon"></i>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
 
-
-<div class="four wide column">
-	<div class="ui card chatbox">
-  		<div class="content">
-		  	<div class="ui inverted vertical menu">
-			  <a class="active item">
-			    Home
-			  </a>
-			  <a class="item">
-			    Messages
-			  </a>
-			  <a class="item">
-			    Friends
-			  </a>
+	<div class="four wide column">
+		<div class="ui card chatbox">
+	  		<div class="content">
+			  	<div class="ui inverted vertical menu">
+				  <a class="active item">
+				    Home
+				  </a>
+				  <a class="item">
+				    Messages
+				  </a>
+				  <a class="item">
+				    Friends
+				  </a>
 				</div>
 			</div>
 		</div>
